# algorithms

./: Cargo.toml  README.md
docs/: kmeans.md
examples/: genetic.rs  kmeans.rs  perceptron.rs
go_algorithms/: README.md  go.mod  go.sum
go_algorithms/examples/: genetic.go  perceptron.go
