[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "kmeans"
path = "examples/kmeans.rs"

[[example]]
name = "genetic"
path = "examples/genetic.rs"

[[example]]
name = "perceptron"
path = "examples/perceptron.rs"

[dependencies]
rand = "*"
